--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Kevin Corder's About
 ---
 
-## Welcome to my site! 
+Welcome to my site! 
 
 This site will serve as my blog, CV, and portfolio site, in that order. Blog posts will be mostly conversational rantings about technical topics in reinforcement learning (RL), other machine learning, and math. I don't expect many readers as of now.. so many of the blog posts may be more notes for myself as I'm preparing my Ph.D. thesis. 
 
