--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,12 @@ layout: default
 title: Kevin Corder's About
 ---
 
-Welcome to my site! 
+<h1>Welcome to my site!</h1>
 
+<p>
 This site will serve as my blog, CV, and portfolio site, in that order. Blog posts will be mostly conversational rantings about technical topics in reinforcement learning (RL), other machine learning, and math. I don't expect many readers as of now.. so many of the blog posts may be more notes for myself as I'm preparing my Ph.D. thesis. 
+</p>
 
+<p>
 I am currently a Ph.D. student at University of Delaware, advised by Dr. Keith Decker. I also work quite a bit at Army Research Lab with Dr. Manny Vindiola. My research is mostly in deep multi-agent RL, but I am broadly interested in all things AI. I also like playing guitar in my prog metal band, rock climbing, and video games. 
+</p> 
