--- a/cv/index.html
+++ b/cv/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Kevin Corder's CV
 ---
 
-<embed src="{{ site.baseurl }}/PhD_Thesis.pdf" type="application/pdf" />
+<embed src="kcorder.github.io/cv/PhD_Thesis.pdf" type="application/pdf" />
 
