--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,21 @@
----
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>CV</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://kcorder.github.io/cv/PhD_Thesis.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
+</html>
+
+
+<!-- 
+--- 
 layout: default
 title: Kevin Corder's CV
 ---
 
 <embed src="kcorder.github.io/cv/PhD_Thesis.pdf" type="application/pdf" />
-
+-->
