--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@ title: Kevin Corder's Page
 <div class="blurb">
     <h1>Kevin's Page</h1>
 </div><!-- /.blurb -->
+
+<img src="files/canoe.jpg" alt="Me in a canoe" width="500" height=auto>
