--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ title: Kevin Corder's Page
     <h1>Kevin's Page</h1>
 </div><!-- /.blurb -->
 
-<img src="files/canoe.jpg" alt="Me in a canoe" width="500" height=auto>
+<img src="files/canoe.jpg" alt="Me in a canoe" width="300" height=auto border-radius: 15%;>
