--- a/index.html
+++ b/index.html
@@ -19,4 +19,4 @@ I am currently a Ph.D. candidate at University of Delaware, advised by Dr. Keith
     I also like playing guitar in my prog metal band, rock climbing, and video games. 
 </p> 
 
-<img src="files/canoe.jpg" alt="Me in a canoe" width="300" height=auto border-radius: 15%;>
+<img src="files/canoe.jpg" alt="Me in a canoe" width="300" height=auto>
