--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ title: Kevin Corder's Page
     <h1>Kevin's Page</h1>
 </div><!-- /.blurb -->
 
+<div>
 <p>
-<img src="files/canoe.jpg" alt="Me in a canoe" width="300" height=auto>
+<img src="files/canoe.jpg" alt="Me in a canoe" width="220" height=auto>
 Welcome! This site will serve as my blog, CV, and portfolio site, in that order. 
     Blog posts will be mostly conversational rantings about technical topics in reinforcement learning (RL), other machine learning, and math. 
     I don't expect many readers, so many of the blog posts may be more notes for myself as I'm preparing my Ph.D. thesis. 
@@ -17,5 +18,5 @@ I am currently a Ph.D. candidate at University of Delaware, advised by Dr. Keith
     My research is mostly in deep multi-agent RL, but I am broadly interested in all things AI. 
     I also like playing guitar in my prog metal band, rock climbing, and video games. 
 </p> 
-
+</div> 
 
