--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Kevin Corder's Page
     <h1>Kevin's Page</h1>
 </div><!-- /.blurb -->
 
-<div>
+<div class="homepage-content">
 <p>
-<img src="files/canoe.jpg" alt="Me in a canoe" width="220" height=auto>
+<img src="files/canoe.jpg" alt="Me in a canoe" width="250" height=auto>
 Welcome! This site will serve as my blog, CV, and portfolio site, in that order. 
     Blog posts will be mostly conversational rantings about technical topics in reinforcement learning (RL), other machine learning, and math. 
     I don't expect many readers, so many of the blog posts may be more notes for myself as I'm preparing my Ph.D. thesis. 
