--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: homepage
 title: Kevin Corder's Page
 ---
 <div class="blurb">
-    <h1>Kevin's Page</h1>
+    <h1>Kevin Corder's Page</h1>
 </div><!-- /.blurb -->
 
 <div class="homepage-content">
