--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,10 @@
   <title>CV</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://kcorder.github.io/cv/CV.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <!--
+      <iframe src="https://kcorder.github.io/cv/CV.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    -->
+    <object src="https://kcorder.github.io/cv/CV.pdf" style="width:100%; height=100%;" type='application/pdf'/></object>
   </body>
 </html>
 
