--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: Kevin Corder's Page
 <div class="homepage-content">
 <p>
 <img src="files/canoe.jpg" alt="Me in a canoe" width="250" height=auto>
-Welcome! This site will serve as my blog, CV, and portfolio site, in that order. 
-    Blog posts will be mostly conversational rantings about technical topics in reinforcement learning (RL), other machine learning, and math. 
+Welcome! This site will be sort of a blog with CV and links attached. 
+    Blog posts will be mostly about technical topics in reinforcement learning (RL), other machine learning, and math. 
     I don't expect many readers, so many of the blog posts may be more notes for myself as I'm preparing my Ph.D. thesis. 
 <br><br>
 I am currently a Ph.D. candidate at University of Delaware, advised by Dr. Keith Decker. 
