--- a/cv/index.html
+++ b/cv/index.html
@@ -1,5 +1,13 @@
+--- 
+layout: default
+title: Kevin Corder's CV
+---
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<iframe src="https://drive.google.com/file/d/1iIB202A2eSGHSOXK78FNNMrCo86kytof/preview" width="640" height="480"></iframe>
+
+
+
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -7,16 +15,6 @@
 </head>
   <body style="width:100%; height:100%; margin:0;">
       <iframe src="https://kcorder.github.io/cv/CV.pdf" style="width:100%; height:100%;"></iframe>
-<!--     <object src="https://kcorder.github.io/cv/CV.pdf" style="width:100%; height=100%;" type='application/pdf'/></object> -->
   </body>
 </html>
-
-
-<!-- 
---- 
-layout: default
-title: Kevin Corder's CV
----
-
-<embed src="kcorder.github.io/cv/PhD_Thesis.pdf" type="application/pdf" />
--->
+ -->
