--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: pdf
 title: Kevin Corder's CV
 ---
 
-<iframe src="https://drive.google.com/file/d/1iIB202A2eSGHSOXK78FNNMrCo86kytof/preview" width="640" height="480"></iframe>
+<iframe src="https://drive.google.com/file/d/1iIB202A2eSGHSOXK78FNNMrCo86kytof/preview" width="100%" height="100%"></iframe>
 
 
 
