--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,15 @@
---- 
-layout: pdf
-title: Kevin Corder's CV
----
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en" style="width:100%; height:100%;">
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>CV</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+      <iframe src="https://drive.google.com/file/d/1iIB202A2eSGHSOXK78FNNMrCo86kytof/preview" width="100%" height="100%"></iframe>
+  </body>
+</html>
 
-<iframe src="https://drive.google.com/file/d/1iIB202A2eSGHSOXK78FNNMrCo86kytof/preview" width="100%" height="100%"></iframe>
+
+
+
+
