--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Welcome! This site will be sort of a blog with CV and links attached.
 I am currently a Ph.D. candidate at University of Delaware, advised by Dr. Keith Decker. 
     I also work quite a bit at Army Research Lab with Dr. Manuel Vindiola. 
     My research is mostly in deep multi-agent RL, but I am broadly interested in all things AI. 
+    My goal is to train communicating decentralized agents in complex scenarios (like partial observability and communication dropout). 
     I also like playing guitar in my prog metal band, rock climbing, and video games. 
 </p> 
 </div> 
